<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.zmarkan.espressoNestedScrollingSample.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 1"
                />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 2"
                />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 3"
                />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 4"
                />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 5"
                />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 6"
                />

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 7"
                />

            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:text="Text 8"
                />

        </LinearLayout>
        

    </androidx.core.widget.NestedScrollView>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>
